Fix glyph z-index in safari

--- a/css/main.css
+++ b/css/main.css
@@ -14,16 +14,21 @@ body {
 }
 
 #background {
+  z-index: -500;
   position: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
   top: 0; 
   left: 0; 
   right: 0;
   bottom: 0;
-  z-index: -200;
+}
+
+#background a {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #everything {
