--- a/css/nav.css
+++ b/css/nav.css
@@ -64,7 +64,6 @@
   justify-content: center;
   -webkit-flex-pack: center;
   -webkit-flex-pack: center;
-  z-index: -10;
   overflow: visible;
 }
 
